Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int getLastError(const char *strIpAddress = "");
DIANA_API int setAIMode(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int writeDO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int writeAO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode, /*IN*/ double value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusCurrent(/*OUT*/ double &current, /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusVoltage(/*OUT*/ double &voltage, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDH(/*OUT[7]*/ double *aDH, /*OUT[7]*/ double *alphaDH, /*OUT[7]*/ double *dDH,
                    /*OUT[7]*/ double *thetaDH, /*IN*/ const char *strIpAddress = "");
DIANA_API int getOriginalJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJacobiMatrix(/*OUT[7 * 6]*/ double *matrix_jacobi, /*IN*/ const char *strIpAddress = "");
DIANA_API int resetDH(const char *strIpAddress = "");
DIANA_API int runProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int stopProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int getVariableValue(const char *variableName, double &value, /*IN*/ const char *strIpAddress = "");
DIANA_API int setVariableValue(const char *variableName, const double &value, /*IN*/ const char *strIpAddress = "");
DIANA_API int isTaskRunning(const char *variableName, /*IN*/ const char *strIpAddress = "");
DIANA_API int pauseProgram(const char *strIpAddress = "");
DIANA_API int resumeProgram(const char *strIpAddress = "");
DIANA_API int stopAllProgram(const char *strIpAddress = "");
DIANA_API int isAnyTaskRunning(const char *strIpAddress = "");
DIANA_API int cleanErrorInfo(const char *strIpAddress = "");
DIANA_API int setCollisionLevel(int level, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointCount(const char *strIpAddress = "");
DIANA_API int getWayPoint(/*IN[64]*/ const char *waypointName, /*OUT[6]*/ double *dblTcppos,
                          /*OUT[7]*/ double *dblJoints, char *strToolName, char *strWorkpieceName, /*IN*/ const char *strIpAddress = "");
DIANA_API int setWayPoint(/*IN[64]*/ const char *waypointName, /*IN[6]*/ double *dblTcppos,
                          /*IN[7]*/ double *dblJoints, const char *strToolName, const char * strWorkpieceName, /*IN*/ const char *strIpAddress = "");
DIANA_API int addWayPoint(/*IN[64]*/ const char *waypointName, /*IN[6]*/ double *dblTcppos,
                          /*IN[7]*/ double *dblJoints, const char *strToolName, const char * strWorkpieceName, /*IN*/ const char *strIpAddress = "");