Modules/LancetHardwareDevice/DianaApi/Release/DianaApi.py


def setAIMode(group_name, di_name, mode, ipAddress=''):
    api_mod.setAIMode.argtypes = [c_char_p, c_char_p, c_int, c_char_p]
    api_mod.setAIMode.restype = c_int
    ret = api_mod.setAIMode(
        bytes(group_name, encoding="utf-8"), bytes(di_name, encoding="utf-8"), mode, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def writeDO(group_name, di_name, value, ipAddress=''):
    api_mod.writeDO.argtypes = [c_char_p, c_char_p, c_int, c_char_p]
    api_mod.writeDO.restype = c_int
    ret = api_mod.writeDO(bytes(group_name, encoding="utf-8"),
                          bytes(di_name, encoding="utf-8"), value, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def writeAO(group_name, di_name, mode, value, ipAddress=''):
    api_mod.writeAO.argtypes = [c_char_p, c_char_p, c_int, c_double, c_char_p]
    api_mod.writeAO.restype = c_int
    ret = api_mod.writeAO(bytes(group_name, encoding="utf-8"),
                          bytes(di_name, encoding="utf-8"), mode, value, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def readBusCurrent(ipAddress=''):
    Current = c_double()
    api_mod.readBusCurrent.argtypes = [POINTER(c_double), c_char_p]
    api_mod.readBusCurrent.restype = c_int
    ret = api_mod.readBusCurrent(byref(Current), bytes(ipAddress.encode('utf-8')))
    return ret, Current


def readBusVoltage(ipAddress=''):
    Voltage = c_double()
    api_mod.readBusVoltage.argtypes = [POINTER(c_double), c_char_p]
    api_mod.readBusVoltage.restype = c_int
    ret = api_mod.readBusVoltage(byref(Voltage), bytes(ipAddress.encode('utf-8')))
    return ret, Voltage

###################### version 1.10#########################


def getDH(aDH, alphaDH, dDH, thetaDH, ipAddress=''):
    arr_aDH = DIANA_DH_A()
    arr_aDH.values = (c_double*7)()
    arr_alphaDH = DIANA_DH_Alpha()
    arr_alphaDH.values = (c_double*7)()
    arr_dDH = DIANA_DH_D()
    arr_dDH.values = (c_double*7)()
    arr_thetaDH = DIANA_DH_Theta()
    arr_thetaDH.values = (c_double*7)()
    api_mod.getDH.restype = c_int
    api_mod.getDH.argtypes = [POINTER(DIANA_DH_A),
                              POINTER(DIANA_DH_Alpha), POINTER(DIANA_DH_D), POINTER(DIANA_DH_Theta), c_char_p]
    ret = api_mod.getDH(byref(arr_aDH), byref(arr_alphaDH),
                        byref(arr_dDH), byref(arr_thetaDH), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(aDH)):
        aDH[index] = arr_aDH.values[index]
    for index in range(0, len(alphaDH)):
        alphaDH[index] = arr_alphaDH.values[index]
    for index in range(0, len(dDH)):
        dDH[index] = arr_dDH.values[index]
    for index in range(0, len(thetaDH)):
        thetaDH[index] = arr_thetaDH.values[index]
    return message(ret)


def getOriginalJointTorque(torques, ipAddress=''):
    jointTorque = DIANA_JOINT_TORQUE()
    jointTorque.values = (c_double*7)()
    api_mod.getOriginalJointTorque.restype = c_int
    api_mod.getOriginalJointTorque.argtypes = [
        POINTER(DIANA_JOINT_TORQUE), c_char_p]
    ret = api_mod.getOriginalJointTorque(
        byref(jointTorque), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(torques)):
        torques[index] = jointTorque.values[index]
    return message(ret)


def getJacobiMatrix(matrix_jacobi, ipAddress=''):
    jacobi_matrix = DIANA_JACOBI_MATRIX()
    jacobi_matrix.values = (c_double*42)()
    api_mod.getJacobiMatrix.restype = c_int
    api_mod.getJacobiMatrix.argtypes = [POINTER(DIANA_JACOBI_MATRIX), c_char_p]
    ret = api_mod.getJacobiMatrix(
        byref(jacobi_matrix), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(matrix_jacobi)):
        matrix_jacobi[index] = jacobi_matrix.values[index]
    return message(ret)

###################### version 1.20#########################


def resetDH(ipAddress=''):
    api_mod.resetDH.argtypes = [c_char_p]
    api_mod.resetDH.restype = c_int
    ret = api_mod.resetDH(bytes(ipAddress.encode('utf-8')))
    return message(ret)

###################### version 1.30#########################


def runProgram(name, ipAddress=''):
    api_mod.runProgram.argtypes = [c_char_p, c_char_p]
    api_mod.runProgram.restype = c_int
    ret = api_mod.runProgram(
        bytes(name, encoding="utf-8"), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def stopProgram(name, ipAddress=''):
    api_mod.stopProgram.argtypes = [c_char_p, c_char_p]
    api_mod.stopProgram.restype = c_int
    ret = api_mod.stopProgram(
        bytes(name, encoding="utf-8"), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getVariableValue(name, ipAddress=''):
    api_mod.getVariableValue.argtypes = [c_char_p, POINTER(c_double), c_char_p]
    api_mod.getVariableValue.restype = c_int
    value = c_double()
    ret = api_mod.getVariableValue(
        bytes(name, encoding="utf-8"), byref(value), bytes(ipAddress.encode('utf-8')))
    return message(ret), value.value


def setVariableValue(name, value, ipAddress=''):
    val = c_double(value)
    api_mod.setVariableValue.argtypes = [c_char_p, POINTER(c_double), c_char_p]
    api_mod.setVariableValue.restype = c_int
    ret = api_mod.setVariableValue(
        bytes(name, encoding="utf-8"), byref(val), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def isTaskRunning(name, ipAddress=''):
    api_mod.isTaskRunning.argtypes = [c_char_p, c_char_p]
    api_mod.isTaskRunning.restype = c_int
    ret = api_mod.isTaskRunning(
        bytes(name, encoding="utf-8"), bytes(ipAddress.encode('utf-8')))
    if(ret >= 0):
        return True
    if(ret== -1):
        return False
    else:
        errorcode = getLastError()
        errorMessage = errorCodeMessage.get(errorcode)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(errorcode))
        else:
            print(callerName + errorMessage)
        return False


def pauseProgram(ipAddress=''):
    api_mod.stopProgram.argtypes = [c_char_p]
    api_mod.pauseProgram.restype = c_int
    ret = api_mod.pauseProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def resumeProgram(ipAddress=''):
    api_mod.resumeProgram.argtypes = [c_char_p]
    api_mod.resumeProgram.restype = c_int
    ret = api_mod.resumeProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def stopAllProgram(ipAddress=''):
    api_mod.stopAllProgram.argtypes = [c_char_p]
    api_mod.stopAllProgram.restype = c_int
    ret = api_mod.stopAllProgram(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def isAnyTaskRunning(ipAddress=''):
    api_mod.isAnyTaskRunning.argtypes = [c_char_p]
    api_mod.isAnyTaskRunning.restype = c_int
    ret = api_mod.isAnyTaskRunning(bytes(ipAddress.encode('utf-8')))
    if(ret >= 0):
        return True
    if(ret== -1):
        return False
    else:
        errorcode = getLastError()
        errorMessage = errorCodeMessage.get(errorcode)
        callerName = 'function ' + sys._getframe().f_back.f_code.co_name + ' fails,'
        if errorMessage == None:
            print(callerName + 'Error Code ' + str(errorcode))
        else:
            print(callerName + errorMessage)
        return False

###################### version 1.40#########################

def cleanErrorInfo(ipAddress=''):
    api_mod.cleanErrorInfo.argtypes = [c_char_p]
    api_mod.cleanErrorInfo.restype = c_int
    ret = api_mod.cleanErrorInfo(bytes(ipAddress.encode('utf-8')))
    return message(ret)


def setCollisionLevel(level, ipAddress=''):
    api_mod.setCollisionLevel.argtypes = [c_int, c_char_p]
    api_mod.setCollisionLevel.restype = c_int
    ret = api_mod.setCollisionLevel(
        level, bytes(ipAddress.encode('utf-8')))
    return message(ret)


###################### version 1.50#########################

def getJointCount(ipAddress=''):
    api_mod.getJointCount.argtypes = [c_char_p]
    api_mod.getJointCount.restype = c_int
    count = api_mod.getJointCount(bytes(ipAddress.encode('utf-8')))
    return count



def getWayPoint(waypointName, dblTcppos, dblJoints, strToolName, strWorkpieceName,ipAddress=''):
    api_mod.getWayPoint.restype = c_int
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    strToolNameBuf = create_string_buffer(64)
    strWorkpieceNameBuf = create_string_buffer(64)
    api_mod.getWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p, c_char_p, c_char_p]
    ret = api_mod.getWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos,  strToolNameBuf, strWorkpieceNameBuf, bytes(ipAddress.encode('utf-8')))
    ret = message(ret)
    if ret == True:
        for index in range(0, len(dblTcppos)):
            dblTcppos[index] = dianaTcpPose.values[index]
        for index in range(0, len(dblJoints)):
            dblJoints[index] = dianaJointPos.values[index]
        strToolName.clear()
        strWorkpieceName.clear()
        strToolName.append(strToolNameBuf.value.decode("utf-8"))
        strWorkpieceName.append(strWorkpieceNameBuf.value.decode("utf-8"))
    return ret

#类的创建：
class GetWaypointInfo:
    def __init__(self, waypointName):
        self.strWaypointName = waypointName
        self.dblJoints= [0] * 6
        self.dblWorkpiecePos=[0] * 6
        self.strToolName=[]
        self.strWorkpieceName=[]
        getWayPoint(self.strWaypointName, self.dblWorkpiecePos, self.dblJoints, self.strToolName, self.strWorkpieceName, '')

    def getWaypointName(self):
        return self.strWaypointName
    
    def getWaypointWorkpiecePos(self):
        return self.dblWorkpiecePos
    
    def getWaypointJoints(self):
        return self.dblJoints
    
    def getWaypointToolName(self):
        return self.strToolName
    
    def getWaypointWorkpieceName(self):
        return self.strWorkpieceName

def setWayPoint(waypointName, dblTcppos, dblJoints, strToolName, strWorkpieceName, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        dianaTcpPose.values[index] = dblTcppos[index]
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        dianaJointPos.values[index] = dblJoints[index]
    api_mod.setWayPoint.restype = c_int
    api_mod.setWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p, c_char_p, c_char_p]
    ret = api_mod.setWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(strToolName.encode('utf-8')), bytes(strWorkpieceName.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)


def addWayPoint(waypointName, dblTcppos, dblJoints, strToolName, strWorkpieceName, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        dianaTcpPose.values[index] = dblTcppos[index]
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        dianaJointPos.values[index] = dblJoints[index]
    api_mod.addWayPoint.restype = c_int
    api_mod.addWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p, c_char_p, c_char_p]
    ret = api_mod.addWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(strToolName.encode('utf-8')), bytes(strWorkpieceName.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)

